server name, class name and bindings changes for names

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>MCP Example</title>
+    <title>Notion Remote MCP</title>
   </head>
   <body>
     <div id="root"></div>
